--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -7,15 +7,14 @@ $color-arrow: black;
   
   
   
-    
+
     top: 0;
     left: 0;
    
 } 
 
-&.show-image {
-	display: block;
-}}
+
+}
 .arrow{
     display: flex;
     justify-content: space-between;
