--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -30,7 +30,8 @@
 	
 }
 
-.select-cat {
+.select-cat 
+{
   max-width: 250px;
 
 
@@ -47,6 +48,9 @@
     align-items: center;
     cursor: pointer;
     justify-content: space-between;
+	&:hover{
+		border: 2px solid blue;
+	}
   }
 
   .list {
@@ -101,6 +105,8 @@
 
   }
 }
+
+
 
 
 
