--- a/sass/home.scss
+++ b/sass/home.scss
@@ -2,42 +2,28 @@
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 50px;
-
-    .containerPhoto {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        /* Espace entre les colonnes */
-        object-fit: cover;
-   
-        
+    
+ 
+    .container-row {
+         display: grid;
+        grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
+     gap : 15px;
+     width: 100%;
     }
 
     .imgPortfolio {
-        width: 48%;
-        gap: 50px;
-        /* Espace entre les images verticalement */
-        box-sizing: border-box;
-        /* Assurez-vous que les marges ne dépassent pas la largeur */
-        
-       margin: 0;
-       display: inline-block;
-    
-        
-
-
-            img {
-                max-width: 100%;
-                /* Pour s'assurer que les images ne dépassent pas leur conteneur */
-                max-height: 500px;
-                /* Conserver le rapport hauteur-largeur des images */
-
-              
-            
-            
+       
+                .attachment-large {
+                    width: 100%;
+                    /* La moitié de la largeur du viewport */
+                    height: 40vw;
+                    /* La moitié de la largeur du viewport, pour former un carré */
+                    object-fit: cover;
+                  
+                }
             }
         }
-    }
+    
 
 
 
@@ -62,9 +48,9 @@
 
 
     .loadMore {
-        width: 25%;
+        width: 20%;
         display: flex;
-        height: 55px;
+        height: 50px;
         justify-content: center;
         border: none;
         align-items: center;
@@ -75,6 +61,8 @@
         text-decoration: none;
         color: black;
         margin: 0;
+         margin-top: 20px;
+    margin-bottom: 20px;
 
         &:hover {
             background-color: black;
@@ -82,12 +70,12 @@
         }
 
         @media screen and (max-width: 992px) {
-            width: 40%;
+            width: 30%;
 
         }
 
         @media screen and (min-width: 320px) and (max-width :576px) {
-            width: 50%;
+            width: 40%;
         }
 
     }
