réajustement code js et php pour le filtre

--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -25,19 +25,46 @@
   }
 
 }
-#filter{
+
+.container-filtre{
 	margin-left: 100px;
+	margin-right: 100px;
+	
+	margin-top: 80px;
+	
+}
+#filter{
+width: 100%;
+display: flex;
+gap:15px;
+
+	.cat-format{
+		width: 50%;
+		display: flex;
+		justify-content: space-between;
+		gap: 5px;
+		
+		
+	}
+
+	.flexRow{
+		display: flex;
+		justify-content: end;
+		width: 50%;
+		
+	}
 	
 }
 
 .select-cat 
 {
-  max-width: 250px;
+//   max-width: 25%;
 
-
+width: 25%;
   .select-btn {
     position: relative;
     display: flex;
+	width: 100%;
     height: 35px;
     background: #fff;
     padding: 5px;
