--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,18 +1,32 @@
 .containerPhoto {
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 50px;
-    
+   
+ 
+  gap: 15px; /* Espacement entre les colonnes */
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 50px;
+
+   
  
     .container-row {
          display: grid;
         grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
-     gap : 15px;
-     width: 100%;
+    gap : 15px;
+ 
+    // display: flex;
+    // justify-content: space-between; */
+
+
+    //  flex: 0 0 calc(50% - 7.5px); /* Répartit les colonnes en deux avec un espacement entre elles */
+     /* L'espace est soustrait pour prendre en compte l'espacement entre les colonnes */
+     /* Ajustez la largeur selon vos préférences */
+   }
+    
     }
 
     .imgPortfolio {
        
+      
                 .attachment-large {
                     width: 100%;
                     /* La moitié de la largeur du viewport */
@@ -22,7 +36,7 @@
                   
                 }
             }
-        }
+        
     
 
 
