--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,13 @@
   border-radius: 3px;
 }
 
+.borderShadow {
+  border-top: transparent;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .containerPost {
+  margin-top: 40px;
   margin-left: 100px;
   margin-right: 100px;
   /* border-top: 1px solid blueviolet;
@@ -267,6 +273,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     display: none; */
 .containerPhoto {
+  gap: 15px; /* Espacement entre les colonnes */
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 50px;
@@ -275,9 +282,11 @@
   display: grid;
   grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
   gap: 15px;
-  width: 100%;
+  /* L'espace est soustrait pour prendre en compte l'espacement entre les colonnes */
+  /* Ajustez la largeur selon vos préférences */
 }
-.containerPhoto .imgPortfolio .attachment-large {
+
+.imgPortfolio .attachment-large {
   width: 100%;
   /* La moitié de la largeur du viewport */
   height: 40vw;
@@ -399,16 +408,36 @@
     opacity: 0;
   }
 }
-#filter {
+.container-filtre {
   margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 80px;
+}
+
+#filter {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+}
+#filter .cat-format {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+#filter .flexRow {
+  display: flex;
+  justify-content: end;
+  width: 50%;
 }
 
 .select-cat {
-  max-width: 250px;
+  width: 25%;
 }
 .select-cat .select-btn {
   position: relative;
   display: flex;
+  width: 100%;
   height: 35px;
   background: #fff;
   padding: 5px;
