--- a/sass/single.scss
+++ b/sass/single.scss
@@ -1,5 +1,5 @@
 .borderShadow{
-    border-top : transparent;
+    border-top : 1px solid transparent;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); 
 }
 
@@ -178,7 +178,7 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 
 
 
-    .related-photo {
+    
        
 
          .attachment-large {
@@ -198,8 +198,7 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 
         
         }
-    }
-
+    
 
 .btn-photo {
     margin-top: 20px;
