--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,11 @@
   gap: 15px;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 576px) {
+  .photo-connexe {
+    grid-template-columns: 1fr;
+  }
+}
 .photo-connexe .attachment-large {
   /*   width: 40vw;
     /* La moitié de la largeur du viewport */
@@ -278,7 +283,13 @@
   margin-top: 50px;
   display: grid;
   grid-template-columns: 50% 50%;
-  gap: 15px;
+  gap: 10px;
+}
+@media screen and (max-width: 576px) {
+  .containerPhoto {
+    grid-template-columns: 1fr;
+    height: auto;
+  }
 }
 .containerPhoto .container-row {
   /* L'espace est soustrait pour prendre en compte l'espacement entre les colonnes */
@@ -387,10 +398,43 @@
   transform: translate(-50%, -50%);
 }
 
+#container-filter {
+  display: flex;
+  width: 100%;
+}
+#container-filter .cat-format {
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+}
+@media screen and (max-width: 576px) {
+  #container-filter .cat-format {
+    display: block;
+    width: 100%;
+    padding-bottom: 15px;
+  }
+}
+#container-filter .container-date {
+  display: flex;
+  justify-content: end;
+  width: 50%;
+}
+@media screen and (max-width: 576px) {
+  #container-filter .container-date {
+    display: block;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 576px) {
+  #container-filter {
+    display: block;
+  }
+}
+
 #format-filter {
   position: relative;
   display: flex;
-  width: 25%;
+  width: 45%;
   height: 45px;
   background: #fff;
   padding: 5px;
@@ -405,11 +449,26 @@
 #format-filter:hover {
   border: 2px solid blue;
 }
+@media screen and (max-width: 576px) {
+  #format-filter {
+    width: 100%;
+  }
+}
+#format-filter option {
+  text-transform: uppercase;
+  padding-bottom: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+#format-filter option:hover {
+  background-color: red;
+  color: red;
+}
 
 #categorie-filter {
   position: relative;
   display: flex;
-  width: 25%;
+  width: 45%;
   height: 45px;
   background: #fff;
   padding: 5px;
@@ -423,6 +482,51 @@
 }
 #categorie-filter:hover {
   border: 2px solid blue;
+}
+@media screen and (max-width: 576px) {
+  #categorie-filter {
+    width: 100%;
+  }
+}
+#categorie-filter option {
+  text-transform: uppercase;
+  padding-bottom: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+#sort-filter {
+  position: relative;
+  display: flex;
+  width: 45%;
+  height: 45px;
+  background: #fff;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 8px;
+  border: 2px solid #D8D8D8;
+  align-items: center;
+  cursor: pointer;
+  justify-content: space-between;
+}
+#sort-filter:hover {
+  border: 2px solid blue;
+}
+@media screen and (max-width: 576px) {
+  #sort-filter {
+    width: 100%;
+  }
+}
+#sort-filter option {
+  text-transform: uppercase;
+  padding-bottom: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+select#format-filter option:nth-child(1):hover {
+  background-color: red !important;
 }
 
 @keyframes fadeInUp {
@@ -659,14 +763,14 @@
     display: none;
     flex-direction: column;
     z-index: 999;
-    height: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     background: red;
     transition: top 1s ease;
-    position: absolute;
+    position: fixed;
     width: 100vw;
-    top: 105px;
+    top: 0;
     margin: 0;
     padding: 0;
     padding-top: 130px;
@@ -678,7 +782,7 @@
 }
 @media screen and (max-width: 785px) and (max-width: 785px) {
   .navbar-nav a {
-    margin-right: 0;
+    margin-right: 0 !important;
     padding-bottom: 30px;
     font-size: 40px;
     color: white !important;
