--- a/sass/burger.scss
+++ b/sass/burger.scss
@@ -11,9 +11,6 @@
         margin-right: 100px;
     }
 
-
-
-
     .line {
         width: 80%;
         height: 2px;
@@ -51,14 +48,15 @@
         display: none;
         flex-direction: column;
         z-index: 999;
-        height: 100%;
+        height: 100vh;
         justify-content: center;
         align-items: center;
         background: red;
         transition: top 1s ease;
-        position: absolute;
+        position: fixed;
         width: 100vw;
-        top: 105px;
+        top: 0;
+    
         margin: 0;
         padding: 0;
         padding-top: 130px;
@@ -70,13 +68,14 @@
         
     a {
         @media screen and (max-width :785px) {
-            margin-right: 0;
+            margin-right: 0 !important;
             padding-bottom: 30px;
             font-size: 40px;
             color: white !important;
             display: flex;
             align-items: center;
             flex-direction: column;
+          
         }
 
     }
