--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,7 +1,45 @@
+#container-filter{
+	display: flex;
+	
+	width: 100%;
+
+	.cat-format{
+		display: flex;
+		width: 50%;
+		justify-content: space-between;
+		@media screen and (max-width : 576px) {
+			display: block;
+			width: 100%;
+			padding-bottom: 15px;
+		}
+	}
+
+	.container-date{
+		display: flex;
+		justify-content: end;
+		width: 50%;
+		@media screen and (max-width : 576px) {
+			display: block;
+			width: 100%;
+		}
+		
+	}
+
+	@media screen and (max-width : 576px) {
+		display: block;
+	
+	}
+
+}
+
+
+
+
+
 #format-filter{
 	position: relative;
     display: flex;
-	width: 25%;
+	width: 45%;
     height: 45px;
     background: #fff;
     padding: 5px;
@@ -15,13 +53,30 @@
 	&:hover{
 		border: 2px solid blue;
 	}
+
+	@media screen and (max-width : 576px) {
+	
+		width: 100%;
 		
+	}
+		option{
+			text-transform: uppercase;
+			padding-bottom: 50px;
+			margin-top: 30px;
+			margin-bottom: 30px;
+		
+			&:hover{
+				background-color: red;
+				color : red;
+				
+			}
+		}
 		
 	}
 	#categorie-filter{
 		position: relative;
 		display: flex;
-		width: 25%;
+		width: 45%;
 		height: 45px;
 		background: #fff;
 		padding: 5px;
@@ -35,10 +90,62 @@
 		&:hover{
 			border: 2px solid blue;
 		}
-	}
 
+		@media screen and (max-width : 576px) {
 	
+			width: 100%;
+			
+		}
+		option{
+			text-transform: uppercase;
+			padding-bottom: 50px;
+			margin-top: 30px;
+			margin-bottom: 30px;
+		
+	}}
 
+
+	#sort-filter{
+		position: relative;
+		display: flex;
+		width: 45%;
+		height: 45px;
+		background: #fff;
+		padding: 5px;
+		padding-left: 15px;
+		padding-right: 15px;
+		border-radius: 8px;
+		border: 2px solid #D8D8D8;
+		align-items: center;
+		cursor: pointer;
+		justify-content: space-between;
+		&:hover{
+			border: 2px solid blue;
+		}
+
+		@media screen and (max-width : 576px) {
+	
+			width: 100%;
+		}
+		option{
+			text-transform: uppercase;
+			padding-bottom: 50px;
+			margin-top: 30px;
+			margin-bottom: 30px;
+		
+	}
+}
+	
+$background-color_1: red;
+select#format-filter {
+	option {
+		&:nth-child(1) {
+			&:hover {
+				background-color: $background-color_1 !important;
+			}
+		}
+	}
+}
 
 
 
