--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@
   margin-top: 50px;
   display: grid;
   grid-template-columns: 50% 50%;
-  gap: 10px;
+  gap: 5px;
 }
 @media screen and (max-width: 576px) {
   .containerPhoto {
@@ -373,6 +373,9 @@
 .overlay-link:hover .fullscreen-icon {
   display: block;
 }
+.overlay-link:hover .text-overlay {
+  display: block;
+}
 .overlay-link img {
   max-width: 100%;
   height: auto;
@@ -398,9 +401,18 @@
   transform: translate(-50%, -50%);
 }
 
+.text-overlay {
+  position: absolute;
+  display: none;
+  left: 2%;
+  bottom: 2%;
+  color: white;
+}
+
 #container-filter {
   display: flex;
   width: 100%;
+  gap: 10px;
 }
 #container-filter .cat-format {
   display: flex;
@@ -733,8 +745,8 @@ select#format-filter option:nth-child(1):hover {
     cursor: pointer;
     position: absolute;
     right: 0;
-    margin-top: 25px;
-    margin-right: 100px;
+    margin-top: 15px;
+    margin-right: 50px;
   }
 }
 .burgerMenu .line {
@@ -802,19 +814,49 @@ select#format-filter option:nth-child(1):hover {
   }
 }
 
-.lightbox {
-  display: none; /* cachée par défaut */
+#lightbox {
   position: fixed; /* fixée et qui prend tout l'écran */
   z-index: 1000; /* Pour être sûr de passer au dessus du reste */
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.7); /* noire avec transparence */
+  background-color: rgba(0, 0, 0, 0.8); /* noire avec transparence */
   background-size: contain; /* l'image occupe tout l'espace disponible */
-  opacity: 0;
-  background-position: center;
-  cursor: pointer; /* Le curseur a la même forme que sur un lien */
+}
+#lightbox .close {
+  position: fixed;
+  font-size: 50px;
+  color: white;
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+#lightbox .prevArrow {
+  position: fixed;
+  color: white;
+  text-transform: none;
+  top: 50%;
+}
+#lightbox .nextArrow {
+  position: fixed;
+  color: white;
+  text-transform: none;
+  right: 0;
+  top: 50%;
+}
+#lightbox .lightbox-contain {
+  position: fixed;
+  width: 50%;
+  margin: auto;
+  max-width: 1200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#lightbox .lightbox-contain img {
+  width: 100%;
+  max-width: 100%;
 }
 
 :root {
@@ -840,8 +882,8 @@ body {
 }
 @media screen and (max-width: 785px) {
   #navigation #logo {
-    margin-left: 25px;
-    height: 11px;
+    margin-left: 50px;
+    height: 10px;
   }
 }
 #navigation .navbar-nav {
