--- a/sass/lightbox.scss
+++ b/sass/lightbox.scss
@@ -1,5 +1,5 @@
 #lightbox {
- //display: none;
+display: none;
     position: fixed; /* fixée et qui prend tout l'écran */
     z-index: 1000; /* Pour être sûr de passer au dessus du reste */
     top: 0;
