--- a/css/main.css
+++ b/css/main.css
@@ -399,14 +399,16 @@
   top: 5%;
   right: 0;
   transform: translate(-50%, -50%);
+  z-index: 999;
+  cursor: pointer;
 }
 
 .text-overlay {
   position: absolute;
-  display: none;
   left: 2%;
   bottom: 2%;
   color: white;
+  display: none;
 }
 
 #container-filter {
@@ -425,6 +427,12 @@
     width: 100%;
     padding-bottom: 15px;
   }
+}
+#container-filter .cat-format option:nth-child(1):hover {
+  background-color: red;
+}
+select:first-child #container-filter:hover {
+  background-color: red;
 }
 #container-filter .container-date {
   display: flex;
@@ -754,17 +762,17 @@ select#format-filter option:nth-child(1):hover {
   height: 2px;
   margin-bottom: 10px;
   background-color: black;
-  transition: all 0.3s linear;
+  transition: all 0.7s linear;
 }
 
 .burgerMenu.active span.l2 {
   opacity: 0;
 }
 .burgerMenu.active span.l1 {
-  transform: rotate(45deg) translate(6px, 11px);
+  transform: rotate(45deg) translate(6px, 10px);
 }
 .burgerMenu.active span.l3 {
-  transform: rotate(-45deg) translate(6px, -11px);
+  transform: rotate(-45deg) translate(6px, -10px);
 }
 
 .navbar-nav {
@@ -782,14 +790,15 @@ select#format-filter option:nth-child(1):hover {
     transition: top 1s ease;
     position: fixed;
     width: 100vw;
-    top: 0;
+    bottom: 0;
+    top: 80px;
     margin: 0;
     padding: 0;
     padding-top: 130px;
   }
   .navbar-nav.active {
     display: block;
-    animation: fadeMenu 3s forwards;
+    animation: fadeMenu 1.5s forwards;
   }
 }
 @media screen and (max-width: 785px) and (max-width: 785px) {
@@ -815,6 +824,7 @@ select#format-filter option:nth-child(1):hover {
 }
 
 #lightbox {
+  display: none;
   position: fixed; /* fixée et qui prend tout l'écran */
   z-index: 1000; /* Pour être sûr de passer au dessus du reste */
   top: 0;
